--- a/pages/login/style.css
+++ b/pages/login/style.css
@@ -22,6 +22,8 @@ dialog{
     margin: auto;
     background-image: url("../../assets/img/doarSangue.png");
     background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
 
     border: none; 
     border-radius: 30px;
