--- a/pages/menu/style.css
+++ b/pages/menu/style.css
@@ -8,13 +8,14 @@
     --primary-color: #FF7200;
     --gray-color: #E5E0E0;
     --white-color: #FFFFFF;
+    --black-color: #000;
 }
 
 body{
-    background-color: #242424;
+    background-color: var(--white-color);
     /* esconde o que passar do tamanho normal da página */
     overflow-x: hidden;
-    color: floralwhite;
+    color: var(--black-color);
     font-family: 'Roboto', sans-serif;
     height: 100vh;
 }
